--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 </div>
               </div>
             </div>
+            <div id="noticias"></div>
             <div class="carousel-item">
             <div class="card rounded">
                 <div class="card-header"><h5>Cotización Dolarsi.com</h5></div>
