--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body class="fixed-nav" id="cuerpo">
     <div class="container-fluid h-100">
-      <div id="carouselPpal" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5">
+      <div id="carouselPpal" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="card-body">
@@ -108,8 +108,8 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                    <h1 class="text-start"><i class="fal fa-money-bill-wave text-success"></i>&nbsp;<span id="valorCompraOficial"></span>/<span id="valorVentaOficial"></span></h1>
-                    <h1 class="text-start"><i class="fal fa-money-bill-wave text-primary"></i>&nbsp;<span id="valorCompraBlue"></span>/<span id="valorVentaBlue"></span></h1>
+                    <h5 class="text-start"><i class="fal fa-money-bill-wave text-success"></i>&nbsp;<span id="valorCompraOficial"></span>/<span id="valorVentaOficial"></span></h5>
+                    <h5 class="text-start"><i class="fal fa-money-bill-wave text-primary"></i>&nbsp;<span id="valorCompraBlue"></span>/<span id="valorVentaBlue"></span></h5>
                     </div>
                   </div>
               </div>
