--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="Juan Maioli">
     <meta name="author" content="https://juanmaioli.com.ar">
@@ -29,7 +29,7 @@
     <!-- fontawesome.com -->
     <link rel="stylesheet" href="css/all.min.css?version=6.2.1">
     <!-- Pi Clock styles -->
-    <link rel="stylesheet" href="css/piclock.css?version=1.0.0" >
+    <link rel="stylesheet" href="css/piclock.css?version=1.1.0" >
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="row">
                   <div class="col text-center">
-                  <h3><span id="weather_desc"></span></h3>
+                  <h4><span id="weather_desc"></span></h4>
                   </div>
                 </div>
               </div>
@@ -65,16 +65,16 @@
                     <div class="col text-start"></div>
                   </div>
                   <div class="row">
-                    <div class="col text-start"><h3 id="feels_like"></h3></div>
+                    <div class="col text-start"><h4 id="feels_like"></h4></div>
                   </div>
                   <div class="row">
-                    <div class="col text-start"><h3 id="humidity"></h3></div>
+                    <div class="col text-start"><h4 id="humidity"></h4></div>
                   </div>
                   <div class="row">
-                    <div class="col text-start"><h3 id="wind"></h3></div>
+                    <div class="col text-start"><h4 id="wind"></h4></div>
                   </div>
                   <div class="row">
-                    <div class="col text-start"><h3 id="pressure"></h3></div>
+                    <div class="col text-start"><h4 id="pressure"></h4></div>
                   </div>
                 </div>
               </div>
@@ -84,19 +84,19 @@
                 <div class="card-header"><h5 id ="city_name2"></h5></div>
                 <div class="card-body">
                   <div class="row">
-                    <div class="col text-start"><h3 id="visibility"></h3></div>
+                    <div class="col text-start"><h4 id="visibility"></h4></div>
                   </div>
                   <div class="row">
-                    <div class="col text-start"><h3 id="clouds"></h3></div>
+                    <div class="col text-start"><h4 id="clouds"></h4></div>
                   </div>
                   <div class="row">
-                      <div class="col text-start"><h3>
+                      <div class="col text-start"><h4>
                       <i class="fal fa-sunrise text-warning fa-fw"></i>&nbsp;<span id="sunrise"></span>&nbsp;
-                      <i class="fal fa-sunset text-warning fa-fw"></i>&nbsp;<span id="sunset"></span></h3>
-                      <h3><i class="fas fa-sun text-warning fa-fw"></i>&nbsp;<span id="sunlight"></span></h3></div>
+                      <i class="fal fa-sunset text-warning fa-fw"></i>&nbsp;<span id="sunset"></span></h4>
+                      <h4><i class="fas fa-sun text-warning fa-fw"></i>&nbsp;<span id="sunlight"></span>hs.</h4></div>
                   </div>
                   <div class="row">
-                      <div class="col text-start"><h3 id="moon"></h3></div>
+                      <div class="col text-start"><h4 id="moon"></h4></div>
                   </div>
                 </div>
               </div>
@@ -107,9 +107,9 @@
                 <div class="card-header"><h5>Cotización Dolarsi.com</h5></div>
                 <div class="card-body">
                   <div class="row">
-                    <div class="col">
-                    <h5 class="text-start"><i class="fal fa-money-bill-wave text-success"></i>&nbsp;<span id="valorCompraOficial"></span>/<span id="valorVentaOficial"></span></h5>
-                    <h5 class="text-start"><i class="fal fa-money-bill-wave text-primary"></i>&nbsp;<span id="valorCompraBlue"></span>/<span id="valorVentaBlue"></span></h5>
+                    <div class="col text-center">
+                    <h3 class="text-center"><i class="fal fa-money-bill-wave text-success"></i>&nbsp;<span id="valorCompraOficial"></span>&nbsp;/&nbsp;<span id="valorVentaOficial"></span></h3>
+                    <h3 class="text-center"><i class="fal fa-money-bill-wave text-primary"></i>&nbsp;<span id="valorCompraBlue"></span>&nbsp;/&nbsp;<span id="valorVentaBlue"></span></h3>
                     </div>
                   </div>
               </div>
@@ -131,6 +131,6 @@
     <!-- Sun JS https://github.com/Triggertrap/sun-js -->
     <script src="js/sun.js"></script>
     <!-- Pi Clock JS -->
-    <script src="js/piclock.js?version=0.0.1"></script>
+    <script src="js/piclock.js?version=0.0.2"></script>
   </body>
 </html>
